--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/api/server.js",
   "scripts": {
+    "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "dev": "nodemon src/api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
